# nifa

./: Cargo.toml  README.md  dist-workspace.toml
src/: cli.rs  main.rs
src/cmd/: export.rs  list.rs  mod.rs  monitor.rs  os.rs  public.rs  show.rs
src/collector/: iface.rs  mod.rs  sys.rs
src/db/: oui.rs
src/model/: ipinfo.rs  mod.rs  snapshot.rs
src/renderer/: json.rs  mod.rs  tree.rs  yaml.rs
