[package]
name = "nifa"
version = "0.0.1"
edition = "2024"
authors = ["shellrow <shellrow@foctal.com>"]
description = "[WIP] Cross-platform CLI tool for network interface"
repository = "https://github.com/shellrow/nifa"
homepage = "https://github.com/shellrow/nifa"
documentation = "https://github.com/shellrow/nifa"
readme = "README.md"
keywords = ["network"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
anyhow = { version = "1" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["time", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_yaml = { version = "0.9" }
netdev = { version = "0.37", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
clap = { version = "4.5", features = ["derive", "cargo"] }
termtree = { version = "0.5" }
home = { version = "0.5" }
hostname = { version = "0.4" }
os_info = { version = "3.12" }
ndb-oui = { version = "0.3", features = ["bundled"] }
ratatui = "0.25"
crossterm = "0.27"
humansize = "2.1"
